# pyhdlc

./: .gitignore  LICENSE  README.md  pyproject.toml
src/hdlc/: __init__.py  fcs.py  hdlc.py
test/: test_decoder.py
